<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.baidu.paddle.paddlenlp.ui.layout.ActionBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:paddingLeft="40px"
            android:paddingTop="60px"
            android:paddingRight="60px"
            android:paddingBottom="40px"
            android:src="@drawable/back_btn" />

        <TextView
            style="@style/action_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50px"
            android:text="@string/uie_app_name"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/btn_settings" />
    </com.baidu.paddle.paddlenlp.ui.layout.ActionBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_uie_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:lines="3"
            android:inputType="textMultiLine"
            android:hint="@string/UIE_INPUT_TEXTS_HINT"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_uie_schema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:lines="3"
            android:inputType="textMultiLine"
            android:hint="@string/UIE_SCHEMA_HINT"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_uie_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="开始抽取信息" />

        <EditText
            android:id="@+id/et_uie_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:lines="4"
            android:inputType="textMultiLine"
            android:hint="信息抽取结果：" />
    </LinearLayout>
</LinearLayout>